feat(config): add multiple configuration files and structures
Introduced new configuration files in various formats (YAML, JSON, properties) to enhance the flexibility and organization of application settings. This change aims to support diverse configuration needs and improve maintainability.

Signed-off-by: HappyBavarian07 <quirin.hosse@hosse.de>